Solve bug no: 4, 5